[package]
name = "szl-simple-xml"
version = "0.1.2"
authors = ["Tim Roberts <ten3roberts@gmail.com>", "Sazhelle Gutierrez-Moulton <szlgmoulton@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ChromeSkullex/simple-xml"
description = "A dead simple xml parser - editor: Sazhelle Gutierrez-Moulton"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
